# BranchBench

./: .gitignore  CMakeLists.txt  LICENSE  README.md
analysis/: plot_scaling.py
src/: main.cpp
